plugins {
    id 'java'
}

task run(type: JavaExec) {
    group = "Execution"
    description = "Run the Example class"
    classpath = sourceSets.main.runtimeClasspath
    main = "eu.medek.linerenderer3d.Example"
}

group 'eu.medek.linerenderer3d'
version '1.0-SNAPSHOT'

sourceCompatibility = 8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.processing', name: 'core', version: '3.3.7'
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-Class': "eu.medek.linerenderer3d.Example"
        )
    }
}